--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -85,7 +85,7 @@
   </aside>
 
   <!-- Top Attractions Section -->
-  @if (topAttractions?.length) {
+  @if (topAttractions.length) {
   <section class="container my-3">
     <h1 class="mb-3 mt-3"
       style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Top
