--- a/src/app/add/add.component.html
+++ b/src/app/add/add.component.html
@@ -15,6 +15,8 @@
     <br />
     <input type="number" formControlName="longitude" placeholder="Longitude" class="form-control" name="longitude" />
     <br />
+    <input type="text" forControlName="image" placeholder="Image URL" class="form-control" name="image" />
+    <br />
 
     <button type="submit" class="btn btn-primary" [disabled]="dynamicForm.invalid || loading">
       {{
