--- a/src/app/add/add.component.html
+++ b/src/app/add/add.component.html
@@ -15,7 +15,7 @@
     <br />
     <input type="number" formControlName="longitude" placeholder="Longitude" class="form-control" name="longitude" />
     <br />
-    <input type="text" forControlName="image" placeholder="Image URL" class="form-control" name="image" />
+    <input type="text" formControlName="imageUrl" placeholder="Image URL" class="form-control" name="imageUrl" />
     <br />
 
     <button type="submit" class="btn btn-primary" [disabled]="dynamicForm.invalid || loading">
